[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/Train/CartAnimation/frame0000.png" type="Texture" id=1]
[ext_resource path="res://scene/UI/cartUi.gd" type="Script" id=2]
[ext_resource path="res://assets/font/SpaceCowboy-6RXg.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 200
outline_size = 4
outline_color = Color( 0.980392, 0.184314, 0.709804, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.980392, 0.184314, 0.709804, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="CartUi" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AmmoLabel" type="Label" parent="."]
margin_left = -198.0
margin_top = -45.0
margin_right = 191.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 1 )
text = "0/10"
align = 1

[node name="ReloadTimer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -205.0
margin_top = -46.0
margin_right = 203.0
margin_bottom = 128.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0
value = 3.0
rounded = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
